--- a/sample/src/samples/tabstrip/images.html
+++ b/sample/src/samples/tabstrip/images.html
@@ -1,2 +1,28 @@
 <template>
+  <require from="./images.css"></require>
+  <div id="example">
+    <div class="demo-section k-content">
+
+      <h4>TabStrip with images</h4>
+
+      <div id="tabstrip-images"
+           k-tabstrip="k-animation.bind: { open: { effects: 'fadeIn'}};
+                       k-data-text-field: text;
+                       k-data-image-url-field: imageUrl;
+                       k-data-content-field: content;
+                       k-data-source.bind: dataSource"></div>
+    </div>
+
+    <div class="demo-section k-content">
+
+      <h4>TabStrip with sprites</h4>
+
+      <div id="tabstrip-sprites"
+           k-tabstrip="k-animation.bind: { open: { effects: 'fadeIn'}};
+                       k-data-text-field: text;
+                       k-data-sprite-css-class: spriteCssClass;
+                       k-data-content-field: content;
+                       k-data-source.bind: dataSourceSprites"></div>
+    </div>
+  </div>
 </template>
