--- a/sample/src/samples/panelbar/events.html
+++ b/sample/src/samples/panelbar/events.html
@@ -1,13 +1,14 @@
 <template>
     <div id="example">
         <div class="demo-section k-content">
-            <k-panel-bar 
-                k-expand-mode="single" 
-                k-on-select.delegate="onSelect($event.detail)" 
-                k-on-expand.delegate="onExpand($event.detail)" 
-                k-on-collapse.delegate="onCollapse($event.detail)" 
-                k-on-activate.delegate="onActivate($event.detail)" 
-                k-on-content-load.delegate="onContentLoad($event.detail)" 
+            <k-panel-bar
+                k-expand-mode="single"
+                k-content-urls.bind="contentUrls"
+                k-on-select.delegate="onSelect($event.detail)"
+                k-on-expand.delegate="onExpand($event.detail)"
+                k-on-collapse.delegate="onCollapse($event.detail)"
+                k-on-activate.delegate="onActivate($event.detail)"
+                k-on-content-load.delegate="onContentLoad($event.detail)"
                 k-on-error.delegate="onError($event.detail)" id="panelbar">
                 <li class="k-state-active">
                     Metallica - Master of Puppets 1986
