feat(responsive-panel): responsive panel

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -184,8 +184,8 @@
                   <a href="#/samples/menu">Menu</a>                          <br>
                   <img src="images/blue.png">
                   <a href="#/samples/panelbar">PanelBar</a>                  <br>
-                  <img src="images/orange.png">
-                  <a href="#">TabStrip</a>                                   <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/tabstrip">TabStrip</a>                  <br>
                   <img src="images/blue.png">
                   <a href="#/samples/toolbar">ToolBar</a>                    <br>
                   <img src="images/blue.png">
