chore(sample): updated project status

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -168,7 +168,8 @@
                   LAYOUT                                                     <br>
                   <img src="images/blue.png">
                   <a href="#/samples/notification">Notification</a>          <br>
-                  <a>Responsive Panel</a>                                    <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/responsivepanel">Responsive Panel</a>   <br>
                   <a>Splitter</a>                                            <br>
                   <img src="images/blue.png">
                   <a href="#/samples/tooltip">Tooltip</a>                    <br>
