--- a/sample/src/samples/responsivepanel/basic-use.html
+++ b/sample/src/samples/responsivepanel/basic-use.html
@@ -1,5 +1,8 @@
 <template>
   <div id="example">
+    <p>
+      Resize your window to see the effect of the responsive panel
+    </p>
     <div class="demo-section k-content">
       <nav id="navigation" k-responsivepanel="k-auto-close.bind: false">
           <a href="#">Home</a>
