chore(sample): updated project status

--- a/sample/src/project-status/controls.html
+++ b/sample/src/project-status/controls.html
@@ -158,7 +158,8 @@
                   SCHEDULING                                                 <br>
                   <img src="images/blue.png">
                   <a href="#/samples/calendar">Calendar</a>                  <br>
-                  <a>Gantt</a>                                               <br>
+                  <img src="images/blue.png">
+                  <a href="#/samples/gantt">Gantt</a>                        <br>
                   <img src="images/blue.png">
                   <a href="#/samples/scheduler">Scheduler</a>                <br>
                   <a></a>                                                    <br>
