--- a/sample/src/shared/api.html
+++ b/sample/src/shared/api.html
@@ -1,5 +1,12 @@
 <template>
-  <div ref="test">
+  <div k-window="k-visible.bind: false;
+                 k-min-width: 900px;
+                 k-widget.two-way: window">
+    <h1>${currentAPI.name}</h1>
 
+    <div style="height: 300px; float: left;">
+      <k-panel-bar k-widget.bind="panelBar">
+      </k-panel-bar>
+    </div>
   </div>
 </template>
