--- a/sample/src/samples/qrcode/basic-use.html
+++ b/sample/src/samples/qrcode/basic-use.html
@@ -13,11 +13,11 @@
                 </div>
                 <div class="demo-section">
                     <h3>Telephone</h3>
-                    <div k-qrcode="k-value: tel:+1-888-365-2779; k-errorCorrection: Q; k-size.bind: 120; k-color: #67a814; k-border.bind: telephoneborder"></div>
+                    <div k-qrcode="k-value: tel:+1-888-365-2779; k-error-correction: Q; k-size.bind: 120; k-color: #67a814; k-border.bind: telephoneborder"></div>
                 </div>
                 <div  class="demo-section">
                     <h3>Geo Location</h3>
-                    <div k-qrcode="k-value: geo:42.65049,23.37925,100; k-errorCorrection: H; k-size.bind: 120; k-color: #166a83"></div>
+                    <div k-qrcode="k-value: geo:42.65049,23.37925,100; k-error-correction: H; k-size.bind: 120; k-color: #166a83"></div>
                 </div>
             </div>
       </div>
