--- a/sample/src/samples/splitter/ajax.html
+++ b/sample/src/samples/splitter/ajax.html
@@ -1,4 +1,8 @@
 <template>
-  <br><br>
-  <h4>Loading content with AJAX </h4>
+  <div id="example">
+    <div id="splitter" k-splitter="k-panes.bind: panes">
+      <div></div>
+      <div></div>
+    </div>
+  </div>
 </template>
