--- a/sample/src/samples/splitter/api.html
+++ b/sample/src/samples/splitter/api.html
@@ -1,4 +1,71 @@
 <template>
-  <br><br>
-  <h4>API</h4>
+  <div id="example">
+    <div class="box wide">
+      <div class="box-col">
+        <h4>Pane index</h4>
+        <ul class="options">
+          <li>
+            <input id="index" type="text" value="0" class="k-textbox" />
+          </li>
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Resize</h4>
+        <ul class="options">
+          <li>
+            <button click.delegate="toggle()" k-button>Expand/Collapse</button>
+          </li>
+          <li>
+            <input id="size" type="text" value="100px" class="k-textbox" />
+            <button click.delegate="setSize()" k-button>Set size</button>
+          </li>
+          <li>
+            <input id="min" type="text" value="50px" class="k-textbox" />
+            <button click.delegate="setMinSize()" k-button>Set minimum size</button>
+          </li>
+          <li>
+            <input id="max" type="text" value="150px" class="k-textbox" />
+            <button click.delegate="setMaxSize()" k-button>Set maximum size</button>
+          </li>
+        </ul>
+      </div>
+      <div class="box-col">
+        <h4>Insert</h4>
+        <ul class="options">
+          <li>
+            <button click.delegate="appendPane()" k-button>Append a pane</button>
+          </li>
+          <li>
+            <button click.delegate="removePane()" k-button>Remove pane</button>
+          </li>
+          <li>
+            <button click.delegate="insertBefore()" k-button>Insert before index</button>
+          </li>
+          <li>
+            <button click.delegate="insertAfter()" k-button>Insert after index</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div id="splitter"
+         ref="splitterElement"
+         k-splitter="k-orientation: horizontal;
+                     k-widget.two-way: splitter;
+                     k-panes.bind: panes;">
+      <div id="top_pane">
+        <p>
+          Left pane
+        </p>
+      </div>
+      <div id="ajax_pane">
+        <!-- content loaded with ajax -->
+      </div>
+      <div id="bottom_pane">
+        <p>
+          Right pane
+        </p>
+      </div>
+    </div>
+  </div>
 </template>
