--- a/sample/src/samples/autocomplete/events.html
+++ b/sample/src/samples/autocomplete/events.html
@@ -6,7 +6,7 @@
                       k-on-open.delegate="logger.log('open')"
                       k-on-close.delegate="logger.log('close')"
                       k-on-change.delegate="logger.log('change')"
-                      k-on-select.delegate="logger.log('select')"
+                      k-on-select.delegate="onSelect($event.detail)"
                       k-on-data-bound.delegate="logger.log('dataBound')"
                       k-on-filtering.delegate="logger.log('filtering')">
         <input style="width: 100%;">
