--- a/sample/src/installation/instructions.html
+++ b/sample/src/installation/instructions.html
@@ -6,7 +6,7 @@
         <ul>
             <li ref="installation" data-type="installation" class="k-state-active">Installation</li>
             <li ref="core" data-type="core">New from Github: Kendo Core</li>
-            <li ref="jspmGit" data-type="jspmGit">New from Telerik: JSPM-git</li>
+            <li ref="jspmGit" data-type="jspm-git">New from Telerik: JSPM-git</li>
             <li ref="vendors" data-type="vendors">Having KendoUI already: Vendors</li>
         </ul>
         <div>
