chore(sample): more refactoring

--- a/sample/src/samples/button/basic-use.html
+++ b/sample/src/samples/button/basic-use.html
@@ -13,17 +13,17 @@
            <div>
               <h4>Disabled buttons</h4>
               <p>
-                   <a k-button="k-enable.bind: false" class="k-primary">Disabled Primary Button</a>
-                   <a k-button="k-enable.bind: false">Disabled Button</a>
+                   <a ak-button="k-enable.bind: false" class="k-primary">Disabled Primary Button</a>
+                   <a ak-button="k-enable.bind: false">Disabled Button</a>
               </p>
           </div>
 
           <div>
              <h4>Buttons with icons</h4>
               <p>
-                  <a k-button="k-sprite-css-class: k-icon k-i-funnel">Filter</a>
-                  <a k-button="k-icon: funnel-clear">Clear Filter</a>
-                  <em k-button="k-sprite-css-class: k-icon k-i-refresh"></em>
+                  <a ak-button="k-sprite-css-class: k-icon k-i-funnel">Filter</a>
+                  <a ak-button="k-icon: funnel-clear">Clear Filter</a>
+                  <em ak-button="k-sprite-css-class: k-icon k-i-refresh"></em>
               </p>
           </div>
       </div>
