--- a/sample/src/samples/chart/stock/pdf-export.html
+++ b/sample/src/samples/chart/stock/pdf-export.html
@@ -4,7 +4,7 @@
   <div class="box wide">
       <h4>Export Stock Chart</h4>
       <div class="box-col">
-          <button class='export-pdf k-button' click.delegate="exportPDF()">Save as PDF</button>
+          <button class='export-pdf ak-button' click.delegate="exportPDF()">Save as PDF</button>
       </div>
   </div>
 
