--- a/sample/src/samples/colorpicker/api.html
+++ b/sample/src/samples/colorpicker/api.html
@@ -1,7 +1,7 @@
 <template>
   <div class="demo-section k-content">
       <label for="colorpicker">ColorPicker:</label>
-      <input k-color-picker="k-widget.two-way: colorPicker; k-tool-icon: k-foreColor; k-value.two-way: color" />
+      <input ak-color-picker="k-widget.two-way: colorPicker; k-tool-icon: k-foreColor; k-value.two-way: color" />
   </div>
   <div class="box wide">
       <div class="box-col">
