--- a/sample/src/samples/colorpicker/basic-use.html
+++ b/sample/src/samples/colorpicker/basic-use.html
@@ -13,7 +13,7 @@
             </div>
             <div class="column">
                 <h3 class="title">Choose Custom Color</h3>
-                <input k-color-picker="k-value: #ffffff; k-buttons.bind: false"
+                <input ak-color-picker="k-value: #ffffff; ak-buttons.bind: false"
                        k-on-select.delegate="background = $event.detail.value"
                        id="picker" />
             </div>
