--- a/sample/src/samples/colorpicker/standalone.html
+++ b/sample/src/samples/colorpicker/standalone.html
@@ -24,7 +24,7 @@
           <dd>No Assembly Required</dd>
       </dl>
 
-      <button class="k-primary k-button">Add to cart</button>
+      <button class="k-primary ak-button">Add to cart</button>
     </div>
   </div>
   <div class="responsive-message"></div>
