--- a/sample/src/samples/combobox/cascading-combobox.html
+++ b/sample/src/samples/combobox/cascading-combobox.html
@@ -50,7 +50,7 @@
               id="orders" disabled="disabled" style="width: 100%;">
       </ak-combobox>
 
-      <button click.delegate="viewOrder()" k-button style="margin-top: 2em; float: right;">View Order</button>
+      <button click.delegate="viewOrder()" ak-button style="margin-top: 2em; float: right;">View Order</button>
     </div>
   </div>
 </template>
