--- a/sample/src/samples/diagram/api.html
+++ b/sample/src/samples/diagram/api.html
@@ -13,7 +13,7 @@
                     <input ak-numerictextbox="k-value.two-way: newShapeY" />
                 </li>
                 <li>
-                    <button type="button" k-button click.delegate="addShape()">Add</button>
+                    <button type="button" ak-button click.delegate="addShape()">Add</button>
                 </li>
             </ul>
         </div>
@@ -29,7 +29,7 @@
                     <input ak-numerictextbox="k-value.two-way: toShapeIndex; k-min.bind: 0; k-format: n0; k-decimals.bind: 0" />
                 </li>
                 <li>
-                    <button type="button" k-button click.delegate="addConnection()">Add</button>
+                    <button type="button" ak-button click.delegate="addConnection()">Add</button>
                 </li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
             <h4>Remove:</h4>
             <ul class="options">
                 <li>
-                    <button type="button" k-button click.delegate="remove()">Remove Selected</button>
+                    <button type="button" ak-button click.delegate="remove()">Remove Selected</button>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
                     <input ak-numerictextbox="k-value.two-way: selectShapeIndex; k-min.bind: 0; k-format: n0; k-decimals.bind: 0" />
                 </li>
                 <li>
-                    <button type="button" k-button click.delegate="select()">Select</button>
+                    <button type="button" ak-button click.delegate="select()">Select</button>
                 </li>
             </ul>
         </div>
@@ -69,7 +69,7 @@
                     <input ak-numerictextbox="k-value.two-way: panY" />
                 </li>
                 <li>
-                    <button type="button" k-button click.delegate="pan()">Pan</button>
+                    <button type="button" ak-button click.delegate="pan()">Pan</button>
                 </li>
             </ul>
         </div>
