--- a/sample/src/samples/diagram/pdf-export.html
+++ b/sample/src/samples/diagram/pdf-export.html
@@ -3,7 +3,7 @@
     <div class="box wide">
         <h4>Export diagram view</h4>
         <div class="box-col">
-            <button class='export-pdf' k-button click.delegate="savePDF()">Save as PDF</button>
+            <button class='export-pdf' ak-button click.delegate="savePDF()">Save as PDF</button>
         </div>
     </div>
     <div class="demo-section k-content wide">
