--- a/sample/src/samples/listview/editing.html
+++ b/sample/src/samples/listview/editing.html
@@ -1,7 +1,7 @@
 <template>
   <require from="./editing.css"></require>
 
-  <a class="k-button k-button-icontext k-add-button" href="#"><span class="k-icon k-add"></span>Add new record</a>
+  <a class="k-button ak-button-icontext k-add-button" href="#"><span class="k-icon k-add"></span>Add new record</a>
 
   <div id="listview-editing">
     <ak-list-view k-data-source.bind="dataSource">
