--- a/sample/src/samples/multiselect/api.html
+++ b/sample/src/samples/multiselect/api.html
@@ -19,14 +19,14 @@
                 <button ak-button click.delegate="multiselect.enable(false)">Disable</button>
             </li>
             <li>
-                <button  k-button click.delegate="multiselect.readonly()">Readonly</button>
+                <button  ak-button click.delegate="multiselect.readonly()">Readonly</button>
             </li>
             <li>
                 <button ak-button click.delegate="multiselect.open()">Open</button>
                 <button ak-button click.delegate="multiselect.close()">Close</button>
             </li>
             <li>
-                <button  k-button click.delegate="getValues()">Get values</button>
+                <button  ak-button click.delegate="getValues()">Get values</button>
             </li>
         </ul>
         </div>
