--- a/sample/src/samples/notification/events.html
+++ b/sample/src/samples/notification/events.html
@@ -14,9 +14,9 @@
 
     <div class="demo-section k-content" style="text-align: center;">
       <p>
-        <button click.delegate="showNotification()" k-button class="k-button k-primary">Show</button> &nbsp; &nbsp;
+        <button click.delegate="showNotification()" ak-button class="k-button k-primary">Show</button> &nbsp; &nbsp;
 
-        <button click.delegate="hideAllNotifications()" k-button class="k-button">Hide All</button>
+        <button click.delegate="hideAllNotifications()" ak-button class="k-button">Hide All</button>
       </p>
     </div>
 
