--- a/sample/src/samples/notification/templates.html
+++ b/sample/src/samples/notification/templates.html
@@ -34,13 +34,13 @@
 
       <h4>Show notification:</h4>
       <p>
-        <button click.delegate="showEmailNotification()" k-button>Email</button><br />
-        <button click.delegate="showErrorNotification()" k-button>Error</button><br />
-        <button click.delegate="showSuccessNotification()" k-button>Upload Success</button>
+        <button click.delegate="showEmailNotification()" ak-button>Email</button><br />
+        <button click.delegate="showErrorNotification()" ak-button>Error</button><br />
+        <button click.delegate="showSuccessNotification()" ak-button>Upload Success</button>
       </p>
       <h4>Hide notification:</h4>
       <p>
-        <button click.delegate="hideAllNotifications()" k-button>Hide All Notifications</button>
+        <button click.delegate="hideAllNotifications()" ak-button>Hide All Notifications</button>
       </p>
 
     </div>
