--- a/sample/src/samples/panelbar/api.html
+++ b/sample/src/samples/panelbar/api.html
@@ -6,7 +6,7 @@
                 <ul class="options">
                     <li>
                         <input type="text" value="0" id="selectIndex" class="k-textbox" />
-                        <button click.delegate="select($event.detail)" class="selectItem k-button">Select</button>
+                        <button click.delegate="select($event.detail)" class="selectItem ak-button">Select</button>
                     </li>
                     <li>
                         <button click.delegate="triggerItem($event.detail)" class="k-button">Expand/Collapse</button>
