--- a/sample/src/samples/pivotgrid/export-to-pdf.html
+++ b/sample/src/samples/pivotgrid/export-to-pdf.html
@@ -1,7 +1,7 @@
 <template>
   <require from="./export-to-pdf.css"></require>
   <div id="example">
-    <button ak-button click.delegate="export()" class="k-button k-button-icontext hidden-on-narrow">
+    <button ak-button click.delegate="export()" class="k-button ak-button-icontext hidden-on-narrow">
       <span class="k-icon k-i-pdf"></span>Export to PDF
     </button>
 
