--- a/sample/src/samples/qrcode/api.html
+++ b/sample/src/samples/qrcode/api.html
@@ -63,17 +63,17 @@
           <ul class="options">
               <li>
                 <label for="bordercolor">Border color</label>
-                <input id="bordercolor" k-color-picker="k-value.two-way: borderColor" />
+                <input id="bordercolor" ak-color-picker="k-value.two-way: borderColor" />
               </li>
 
               <li>
                <label for="backgroundColor">Background color</label>
-                <input id="backgroundColor" k-color-picker="k-value.two-way: backgroundColor" />
+                <input id="backgroundColor" ak-color-picker="k-value.two-way: backgroundColor" />
               </li>
 
               <li>
                 <label for="moduleColor">Module color</label>
-                <input id="moduleColor" k-color-picker="k-value.two-way: moduleColor" />
+                <input id="moduleColor" ak-color-picker="k-value.two-way: moduleColor" />
               </li>
           </ul>
       </div>
