--- a/sample/src/samples/toolbar/integration-with-editors.html
+++ b/sample/src/samples/toolbar/integration-with-editors.html
@@ -49,14 +49,14 @@
           <ak-toolbar-item>
             <ak-template>
               <label>BACKGROUND:</label>
-              <input k-color-picker="k-value.two-way: backColor; k-buttons.bind: false"/>
+              <input ak-color-picker="k-value.two-way: backColor; ak-buttons.bind: false"/>
             </ak-template>
           </ak-toolbar-item>
           <ak-toolbar-item k-type="separator"></ak-toolbar-item>
           <ak-toolbar-item>
             <ak-template>
               <label>BORDER:</label>
-              <input k-color-picker="k-value.two-way: borderColor; k-buttons.bind: false"/>
+              <input ak-color-picker="k-value.two-way: borderColor; ak-buttons.bind: false"/>
             </ak-template>
           </ak-toolbar-item>
           <ak-toolbar-item>
