--- a/sample/src/samples/validator/custom-validation.html
+++ b/sample/src/samples/validator/custom-validation.html
@@ -27,7 +27,7 @@
             <span data-for='RetireDate' class='k-invalid-msg'></span>
           </li>
           <li>
-            <button type="button" k-button class="k-primary" click.delegate="save()">Save</button>
+            <button type="button" ak-button class="k-primary" click.delegate="save()">Save</button>
           </li>
         </ul>
       </form>
