--- a/sample/src/samples/window/ajax.html
+++ b/sample/src/samples/window/ajax.html
@@ -7,7 +7,7 @@
          ak-window="k-width: 615px; k-title.bind: title; k-content.bind: content; k-widget.bind: window"
          k-on-close.delegate="onClose()"></div>
 
-    <span id="undo" ref="undo" style="display:none" k-button click.delegate="open()">Click here to open the window.</span>
+    <span id="undo" ref="undo" style="display:none" ak-button click.delegate="open()">Click here to open the window.</span>
 
     <div class="responsive-message"></div>
   </div>
