--- a/sample/src/samples/window/customizing-actions.html
+++ b/sample/src/samples/window/customizing-actions.html
@@ -15,7 +15,7 @@
       <p>Source: <a href="http://www.senses-artnouveau.com/biography.php?artist=hof" title="About Josef Hoffmann">http://www.senses-artnouveau.com/</a></p>
     </div>
 
-    <span id="undo" ref="undo" style="display:none" k-button click.delegate="open()">Click here to open the window.</span>
+    <span id="undo" ref="undo" style="display:none" ak-button click.delegate="open()">Click here to open the window.</span>
 
     <div class="responsive-message"></div>
   </div>
