--- a/sample/src/samples/window/events.html
+++ b/sample/src/samples/window/events.html
@@ -19,7 +19,7 @@
          k-on-dragstart.delegate="logger.log('drag start')"
          k-on-dragend.delegate="logger.log('drag end')"></div>
 
-    <span id="undo" ref="undo" style="display:none" k-button click.delegate="open()">Click here to open the window.</span>
+    <span id="undo" ref="undo" style="display:none" ak-button click.delegate="open()">Click here to open the window.</span>
 
     <div class="responsive-message"></div>
   </div>
