--- a/sample/src/samples/button/events.html
+++ b/sample/src/samples/button/events.html
@@ -2,11 +2,11 @@
     <div id="example">
       <div id="button-events">
         <div class="demo-section k-content">
-          <button type="button" id="textButton" k-button k-on-click.delegate="btnClicked($event.detail)">
+          <button type="button" id="textButton" ak-button k-on-click.delegate="btnClicked($event.detail)">
             Text Button
           </button>
-          <span id="refreshButton" k-button="k-icon: refresh" k-on-click.delegate="btnClicked($event.detail)">Refresh Button</span>
-          <a id="disabledButton" k-button="k-enable.bind: false" k-on-click.delegate="btnClicked($event.detail)">Disabled Button</a>
+          <span id="refreshButton" ak-button="k-icon: refresh" k-on-click.delegate="btnClicked($event.detail)">Refresh Button</span>
+          <a id="disabledButton" ak-button="k-enable.bind: false" k-on-click.delegate="btnClicked($event.detail)">Disabled Button</a>
 
           <p class="demo-hint">The disabled button will not fire click events.</p>
         </div>
