--- a/sample/src/samples/chart/funnel-charts/funnel-labels.html
+++ b/sample/src/samples/chart/funnel-charts/funnel-labels.html
@@ -79,8 +79,8 @@
                 <h4>Font color</h4>
                 <ul class="options">
                     <li><label for="color"></label></li>
-                    <li><input id="color" k-color-picker="k-value: #000;
-                                                          k-buttons.bind: false;
+                    <li><input id="color" ak-color-picker="k-value: #000;
+                                                          ak-buttons.bind: false;
                                                           k-widget.two-way: colorpicker"
                                           k-on-change.delegate="refresh()" /></li>
                 </ul>
