--- a/sample/src/samples/notification/basic-use.html
+++ b/sample/src/samples/notification/basic-use.html
@@ -12,12 +12,12 @@
     <div class="demo-section k-content">
       <h4>Show notification</h4>
       <p>
-        <button click.delegate="showPopupNotification()" k-button>As a popup at bottom-right</button><br />
-        <button click.delegate="showStaticNotification()" k-button>Static in the panel below</button>
+        <button click.delegate="showPopupNotification()" ak-button>As a popup at bottom-right</button><br />
+        <button click.delegate="showStaticNotification()" ak-button>Static in the panel below</button>
       </p>
       <div style="padding-top: 1em;">
         <h4>Hide notification</h4>
-        <button click.delegate="hideAllNotifications()" k-button>Hide All Notifications</button>
+        <button click.delegate="hideAllNotifications()" ak-button>Hide All Notifications</button>
       </div>
     </div>
 
