--- a/sample/src/samples/splitter/api.html
+++ b/sample/src/samples/splitter/api.html
@@ -13,19 +13,19 @@
         <h4>Resize</h4>
         <ul class="options">
           <li>
-            <button click.delegate="toggle()" k-button>Expand/Collapse</button>
+            <button click.delegate="toggle()" ak-button>Expand/Collapse</button>
           </li>
           <li>
             <input id="size" type="text" value="100px" class="k-textbox" />
-            <button click.delegate="setSize()" k-button>Set size</button>
+            <button click.delegate="setSize()" ak-button>Set size</button>
           </li>
           <li>
             <input id="min" type="text" value="50px" class="k-textbox" />
-            <button click.delegate="setMinSize()" k-button>Set minimum size</button>
+            <button click.delegate="setMinSize()" ak-button>Set minimum size</button>
           </li>
           <li>
             <input id="max" type="text" value="150px" class="k-textbox" />
-            <button click.delegate="setMaxSize()" k-button>Set maximum size</button>
+            <button click.delegate="setMaxSize()" ak-button>Set maximum size</button>
           </li>
         </ul>
       </div>
@@ -33,16 +33,16 @@
         <h4>Insert</h4>
         <ul class="options">
           <li>
-            <button click.delegate="appendPane()" k-button>Append a pane</button>
+            <button click.delegate="appendPane()" ak-button>Append a pane</button>
           </li>
           <li>
-            <button click.delegate="removePane()" k-button>Remove pane</button>
+            <button click.delegate="removePane()" ak-button>Remove pane</button>
           </li>
           <li>
-            <button click.delegate="insertBefore()" k-button>Insert before index</button>
+            <button click.delegate="insertBefore()" ak-button>Insert before index</button>
           </li>
           <li>
-            <button click.delegate="insertAfter()" k-button>Insert after index</button>
+            <button click.delegate="insertAfter()" ak-button>Insert after index</button>
           </li>
         </ul>
       </div>
