--- a/sample/src/samples/spreadsheet/datasource-binding.html
+++ b/sample/src/samples/spreadsheet/datasource-binding.html
@@ -5,8 +5,8 @@
         <h4>Save data changes</h4>
         <ul class="options">
           <li>
-            <button id="save" click.delegate="save($event)" k-button>Save changes</button>
-            <button id="cancel" click.delegate="cancel($event)" k-button>Cancel changes</button>
+            <button id="save" click.delegate="save($event)" ak-button>Save changes</button>
+            <button id="cancel" click.delegate="cancel($event)" ak-button>Cancel changes</button>
           </li>
         </ul>
       </div>
