--- a/sample/src/samples/window/api.html
+++ b/sample/src/samples/window/api.html
@@ -5,8 +5,8 @@
         <h4>API Functions</h4>
         <ul class="options">
           <li>
-            <button click.delegate="window.open()" k-button>Open</button>
-            <button click.delegate="window.close()" k-button>Close</button>
+            <button click.delegate="window.open()" ak-button>Open</button>
+            <button click.delegate="window.close()" ak-button>Close</button>
           </li>
         </ul>
       </div>
@@ -14,8 +14,8 @@
         <h4>&nbsp;</h4>
         <ul class="options">
           <li>
-            <button click.delegate="window.refresh()" k-button>Refresh</button>
-            <button click.delegate="window.center()" k-button>Center</button>
+            <button click.delegate="window.refresh()" ak-button>Refresh</button>
+            <button click.delegate="window.center()" ak-button>Center</button>
           </li>
         </ul>
       </div>
