chore(sample): fix for kendo control header height issue

--- a/sample/src/shared/api.html
+++ b/sample/src/shared/api.html
@@ -1,5 +1,5 @@
 <template>
-  <div aak-window="k-visible.bind: false;
+  <div ak-window="k-visible.bind: false;
                  k-min-width: 900px;
                  k-widget.two-way: window">
     <h1>${currentAPI.name}</h1>
