chore(sample): refactor prefix

--- a/sample/src/samples/tooltip/ajax.html
+++ b/sample/src/samples/tooltip/ajax.html
@@ -10,7 +10,7 @@
       </div>
       <ul id="products"
           class="dairy-photos"
-          k-tooltip="k-filter: a;
+          ak-tooltip="k-filter: a;
                      k-content.bind: content;
                      k-width.bind: 220;
                      k-height.bind: 280;
