--- a/sample/src/samples/tooltip/api.html
+++ b/sample/src/samples/tooltip/api.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
 
-    <div id="tooltip" k-tooltip="k-widget.bind: tooltip; k-auto-hide.bind: false; k-show-on: click; k-position: bottom: k-filter: div; k-width.bind: 200; k-content.bind: content">
+    <div id="tooltip" ak-tooltip="k-widget.bind: tooltip; k-auto-hide.bind: false; k-show-on: click; k-position: bottom: k-filter: div; k-width.bind: 200; k-content.bind: content">
         <div id="target1" class="k-group">Target 1</div>
         <div id="target2" class="k-group">Target 2</div>
     </div>
