--- a/sample/src/samples/validator/basic-use.html
+++ b/sample/src/samples/validator/basic-use.html
@@ -3,7 +3,7 @@
   <div id="example">
     <div class="demo-section k-content">
       <div id="tickets">
-        <form id="ticketsForm" submit.delegate="submit($event)" k-validator="k-widget.two-way: validator">
+        <form id="ticketsForm" submit.delegate="submit($event)" ak-validator="k-widget.two-way: validator">
           <ul id="fieldlist">
             <li>
               <label for="fullname" class="required">Your Name</label>
