--- a/sample/src/samples/datepicker/api.html
+++ b/sample/src/samples/datepicker/api.html
@@ -5,7 +5,7 @@
                 <h4>Set / Get Value</h4>
                 <ul class="options">
                     <li>
-                        <input id="value" k-datepicker="k-value.bind : '10/10/2000'; k-widget.two-way: valueDatePicker" style="float:none"/>
+                        <input id="value" ak-datepicker="k-value.bind : '10/10/2000'; k-widget.two-way: valueDatePicker" style="float:none"/>
                         <button id="set" class="k-button" click.delegate="setValue()">Set value</button>
                     </li>
                     <li style="text-align: right;">
@@ -35,7 +35,7 @@
         </div>
 
         <div class="demo-section k-content">
-            <input id="datepicker" style="width: 100%;" k-datepicker="k-widget.two-way: datepicker"/>
+            <input id="datepicker" style="width: 100%;" ak-datepicker="k-widget.two-way: datepicker"/>
         </div>
     </div>
 </template>
