--- a/sample/src/samples/datepicker/events.html
+++ b/sample/src/samples/datepicker/events.html
@@ -2,7 +2,7 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Select date</h4>
-            <input id="datepicker" k-datepicker="k-widget.two-way: datepicker"
+            <input id="datepicker" ak-datepicker="k-widget.two-way: datepicker"
                                    k-on-open.delegate="onOpen()"
                                    k-on-close.delegate="onClose()"
                                    k-on-change.delegate="onChange()"
