--- a/sample/src/samples/datepicker/range-selection.html
+++ b/sample/src/samples/datepicker/range-selection.html
@@ -2,7 +2,7 @@
     <div id="example">
         <div class="demo-section k-content">
             <h4>Start date:</h4>
-            <input k-datepicker="k-value.bind : '10/10/2011';
+            <input ak-datepicker="k-value.bind : '10/10/2011';
                                  k-widget.two-way: startDatePicker"
                    k-on-change.delegate="startChange()"
                    id="start"
@@ -11,7 +11,7 @@
             <h4 style="margin-top: 2em">End date:</h4>
             <input id="end"
                    style="width: 100%;"
-                   k-datepicker="k-value.bind : '10/10/2012';
+                   ak-datepicker="k-value.bind : '10/10/2012';
                                  k-widget.two-way: endDatePicker"
                    k-on-change.delegate="endChange()"/>
         </div>
