--- a/sample/src/samples/datepicker/value-binding.html
+++ b/sample/src/samples/datepicker/value-binding.html
@@ -1,7 +1,7 @@
 <template>
     <div id="example">
         <div class="demo-section k-content">
-            <input id="datepicker" k-datepicker="k-value.two-way: selectedDate" style="width: 100%" />
+            <input id="datepicker" ak-datepicker="k-value.two-way: selectedDate" style="width: 100%" />
 
             <p>Selected value: ${selectedDate}</p>
 
