--- a/sample/src/samples/tooltip/basic-use.html
+++ b/sample/src/samples/tooltip/basic-use.html
@@ -1,7 +1,7 @@
 <template>
   <require from="./basic-use.css"></require>
   <div id="example"
-       k-tooltip="k-filter: a;
+       ak-tooltip="k-filter: a;
                   k-width.bind: 120;
                   k-position: top;
                   k-widget.bind: tooltip">
