--- a/sample/src/samples/validator/custom-validation.html
+++ b/sample/src/samples/validator/custom-validation.html
@@ -4,7 +4,7 @@
   <div id="example">
     <div class="demo-section k-content">
       <form id="employeeForm"
-            k-validator="k-widget.bind: validator; k-rules.bind: rules"
+            ak-validator="k-widget.bind: validator; k-rules.bind: rules"
             data-role="validator"
             novalidate="novalidate">
         <ul id="fieldlist">
