--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -17,7 +17,7 @@
         <a href="#">Theme</a>
     </li>
     <li>
-        <a route-href="route: help">Docs</a>
+        <a route-href="route: help">Help</a>
     </li>
   </ul>
 
