--- a/sample/src/samples/drag-and-drop/area.html
+++ b/sample/src/samples/drag-and-drop/area.html
@@ -8,7 +8,7 @@
            k-on-drop.delegate="droptargetOnDrop($event.detail)"
            ref="dropDiv"
            id="droptarget"
-           k-drop-target-area.ref="drop">
+           ak-drop-target-area.ref="drop">
           <div class="test1">Drag the small circle here ...</div>
           <div class="test2">... Or here.</div>
       </div>
